test/expected/regression-net-connect.txt
/scripts/regression-net-connect.js:11
  throw error;
  ^

Error: connect ECONNREFUSED 127.0.0.1:24075
    at Object.exports._errnoException (util.js:1020:11)
    at exports._exceptionWithHostPort (util.js:1043:20)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:1146:14)
    at process.nextTick (internal/process/next_tick.js:291:7)
    at _destroy (internal/streams/destroy.js:34:15)
    at Socket._destroy (net.js:556:3)
    at Socket.destroy (internal/streams/destroy.js:32:8)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:1155:10)
    at internalConnect (net.js:911:26)
    at GetAddrInfoReqWrap.emitLookup [as callback] (net.js:1070:7)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:97:10)
    at Socket.connect (net.js:973:40)
    at Object.connect (net.js:108:35)
    at Object.<anonymous> (/scripts/regression-net-connect.js:9:20)
    at Module._compile (module.js:569:30)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:503:32)
    at tryModuleLoad (module.js:466:12)
    at Function.Module._load (module.js:458:3)
    at Function.Module.runMain (module.js:605:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:575:3
